--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Predict.College</a>
+        <a class="navbar-brand" href="#">Predict.Stay</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,12 +46,171 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h1 class="mt-5">Predict.College</h1>
-          <p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
-          <ul class="list-unstyled">
-            <li>Bootstrap 4.1.3</li>
-            <li>jQuery 3.3.1</li>
-          </ul>
+          <h1 class="mt-5">Predict.Stay</h1>
+          <p class="lead">Predicting a patient's hospital stay.</p>
+          <div class="container">
+              <form class="form-horizontal" action="#">
+                <div class="form-group">
+                  <label class="control-label col-sm-2" for="area">Service Area</label>
+                  <div class="col-sm-10">
+                      <select class="form-control" id="area">
+                          <option>Finger Lakes</option>
+                          <option>Western NY</option>
+                        </select>
+                  </div>
+                  <div class="form-group">
+                      <label class="control-label col-sm-2" for="area">Hospital County</label>
+                      <div class="col-sm-10">
+                          <select class="form-control" id="area">
+                              <option>Finger Lakes</option>
+                              <option>Western NY</option>
+                            </select>
+                      </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="opn">Operating Certificate Number</label>
+                    <div class="col-sm-10">
+                        <input type="" class="form-control" id="opn" placeholder="12345678">
+                    </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" for="fid">Facility ID</label>
+                        <div class="col-sm-10">
+                            <input type="number" class="form-control" id="fid" placeholder="123456">
+                        </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-2" for="zip">Zip Code</label>
+                            <div class="col-sm-10">
+                                <input type="number" class="form-control" id="zip" placeholder="First 3 digit of patient's zip code">
+                            </div>
+                        </div>
+                      
+                            <div class="form-group">
+                                <label class="control-label col-sm-2" for="age">Age Group</label>
+                                <div class="col-sm-10">          
+                                    <select class="form-control" id="age">
+                                        <option>0-17 years old</option>
+                                        <option>18-29 years old</option>
+                                        <option>30-49 years old</option>
+                                        <option>50-69 years old</option>
+                                        <option>70 years old or older</option>
+                                      </select>
+                                </div>
+                              </div>
+                <div class="form-group">
+                  <label class="control-label col-sm-2" for="sex">Sex</label>
+                  <div class="col-sm-10">          
+                      <select class="form-control" id="sex">
+                          <option>M</option>
+                          <option>F</option>
+                        </select>
+                  </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="race">Race</label>
+                    <div class="col-sm-10">          
+                        <select class="form-control" id="race">
+                            <option>Black/African American</option>
+                            <option>White</option>
+                            <option>Native Americans</option>
+                            <option>Asian/Pacific Islander</option>
+                            <option>Multi</option>
+                            <option>Other Race</option>
+                            <option>Unknown</option>
+                          </select>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                      <label class="control-label col-sm-2" for="eth">Ethnicity</label>
+                      <div class="col-sm-10">          
+                          <select class="form-control" id="eth">
+                              <option>Spanish/Hispanic Origin</option>
+                              <option>Not of Spanish/Hispanic Origin</option>
+                              <option>Multi</option>
+                              <option>Unknown</option>
+                            </select>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" for="admission">Type of Admission</label>
+                        <div class="col-sm-10">          
+                            <select class="form-control" id="admission">
+                                <option>Elective</option>
+                                <option>Emergency</option>
+                                <option>Newborn</option>
+                                <option>Trauma</option>
+                                <option>Urgent</option>
+                                <option>Not Available</option>
+                              </select>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="control-label col-sm-2" for="digcode">Diagnosis Code</label>
+                          <div class="col-sm-10">
+                              <input type="number" class="form-control" id="digcode" placeholder="123">
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="control-label col-sm-2" for="digdes">Diagnosis Description</label>
+                          <div class="col-sm-10">
+                              <input type="text" class="form-control" id="digdes" placeholder="">
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="control-label col-sm-2" for="procode">Procedure Code</label>
+                          <div class="col-sm-10">
+                              <input type="number" class="form-control" id="procode" placeholder="123">
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="control-label col-sm-2" for="prodes">Procedure Description</label>
+                          <div class="col-sm-10">
+                              <input type="text" class="form-control" id="prodes" placeholder="">
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="control-label col-sm-2" for="drgc">DRG Code</label>
+                          <div class="col-sm-10">
+                              <input type="number" class="form-control" id="drgc" placeholder="123">
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="control-label col-sm-2" for="drgd">DRG Description</label>
+                          <div class="col-sm-10">
+                              <input type="text" class="form-control" id="drgd" placeholder="">
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="control-label col-sm-2" for="mdcc">MDC Code</label>
+                          <div class="col-sm-10">
+                              <input type="number" class="form-control" id="mdcc" placeholder="123">
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="control-label col-sm-2" for="mdcd">MDC Description</label>
+                          <div class="col-sm-10">
+                              <input type="text" class="form-control" id="mdcd" placeholder="">
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="control-label col-sm-2" for="procode">Severity of Illness Code</label>
+                          <div class="col-sm-10">
+                              <select class="form-control" id="admission">
+                                  <option>1</option>
+                                  <option>2</option>
+                                  <option>3</option>
+                                  <option>4</option>
+                                </select>                          
+                              </div>
+                      </div>
+                <div class="form-group">        
+                  <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Submit</button>
+                  </div>
+                </div>
+              </form>
+            </div>
         </div>
       </div>
     </div>
@@ -61,5 +220,13 @@
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   </body>
-
+<footer>
+  <div class = "container">
+    <ul class="list-unstyled">
+    <li>Bootstrap 4.1.3</li>
+    <li>jQuery 3.3.1</li>
+    </ul>
+  </div>
+  
+</footer>
 </html>
