--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>College Prediction</title>
+    <title>Predict</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,9 +45,11 @@
     <!-- Page Content -->
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
-          <h1 class="mt-5">Predict.Stay</h1>
-          <p class="lead">Predicting a patient's hospital stay.</p>
+        <div class="col-lg-12 ">
+            <div class = "text-center">
+                    <h1 class="mt-5">Predict.Stay</h1>
+                    <p class="lead">Predicting a patient's hospital stay.</p>
+            </div>
           <div class="container">
               <form class="form-horizontal" action="#">
                 <div class="form-group">
@@ -55,22 +57,26 @@
                   <div class="col-sm-10">
                       <select class="form-control" id="area">
                           <option>Finger Lakes</option>
+                          <option>Capital/Adirondack</option>
+                          <option>Central NY</option>
+                          <option>Hudson Valley</option>
+                          <option>Long Island</option>
+                          <option>New York City</option>
+                          <option>Southern Tier</option>
                           <option>Western NY</option>
                         </select>
                   </div>
                   <div class="form-group">
-                      <label class="control-label col-sm-2" for="area">Hospital County</label>
+                      <label class="control-label col-sm-2" for="county">Hospital County</label>
                       <div class="col-sm-10">
-                          <select class="form-control" id="area">
-                              <option>Finger Lakes</option>
-                              <option>Western NY</option>
-                            </select>
+                            <input type="text" class="form-control" id="county" placeholder="County of Hospital">
+
                       </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="opn">Operating Certificate Number</label>
                     <div class="col-sm-10">
-                        <input type="" class="form-control" id="opn" placeholder="12345678">
+                        <input type="text" class="form-control" id="opn" placeholder="12345678">
                     </div>
                     </div>
                     <div class="form-group">
@@ -194,9 +200,9 @@
                           </div>
                       </div>
                       <div class="form-group">
-                          <label class="control-label col-sm-2" for="procode">Severity of Illness Code</label>
+                          <label class="control-label col-sm-2" for="illcode">Severity of Illness Code</label>
                           <div class="col-sm-10">
-                              <select class="form-control" id="admission">
+                              <select class="form-control" id="illcode">
                                   <option>1</option>
                                   <option>2</option>
                                   <option>3</option>
@@ -204,6 +210,105 @@
                                 </select>                          
                               </div>
                       </div>
+                      <div class="form-group">
+                        <label class="control-label col-sm-2" for="illdes">Severity of Illness Description</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" id="illdes">                               
+                                <option>Minor</option>
+                                <option>Moderate</option>
+                                <option>Major</option>
+                                <option>Extremes</option>
+                              </select>                          
+                            </div>
+                    </div>
+                    <div class="form-group">
+                            <label class="control-label col-sm-2" for="mortality">Risk of Mortality</label>
+                            <div class="col-sm-10">
+                                <select class="form-control" id="mortality">                               
+                                    <option>Minor</option>
+                                    <option>Moderate</option>
+                                    <option>Major</option>
+                                    <option>Extremes</option>
+                                  </select>                          
+                                </div>
+                        </div>
+                        <div class="form-group">
+                                <label class="control-label col-sm-2" for="surgical">Surgical Description</label>
+                                <div class="col-sm-10">
+                                    <select class="form-control" id="surgical">                               
+                                        <option>Medical</option>
+                                        <option>Surgical</option>
+                                        <option>Not Applicable</option>
+                                      </select>                          
+                                    </div>
+                            </div>
+                            <div class="form-group">
+                                    <label class="control-label col-sm-2" for="procode">Severity of Illness Code</label>
+                                    <div class="col-sm-10">
+                                        <select class="form-control" id="admission">                               
+                                            <option>Minor</option>
+                                            <option>Moderate</option>
+                                            <option>Major</option>
+                                            <option>Extremes</option>
+                                          </select>                          
+                                        </div>
+                                </div>
+                                <div class="form-group">
+                                        <label class="control-label col-sm-2" for="pay1">Payment Type 1</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" id="pay1" placeholder="Type of Payment">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                            <label class="control-label col-sm-2" for="pay2">Payment Type 2</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" class="form-control" id="pay2" placeholder="Type of Payment">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                                <label class="control-label col-sm-2" for="attendingProvider">Attending Provider License Number</label>
+                                                <div class="col-sm-10">
+                                                    <input type="number" class="form-control" id="attendingProvider" placeholder="12345678">
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                    <label class="control-label col-sm-2" for="operatorProvider">Operating Provider License Number</label>
+                                                    <div class="col-sm-10">
+                                                        <input type="number" class="form-control" id="operatorProvider" placeholder="12345678">
+                                                    </div>
+                                                </div>
+                                                <div class="form-group">
+                                                        <label class="control-label col-sm-2" for="otherProvider">Other Provider License Number</label>
+                                                        <div class="col-sm-10">
+                                                            <input type="number" class="form-control" id="otherProvider" placeholder="12345678">
+                                                        </div>
+                                                 </div>
+                                             <div class="form-group">
+                                                 <label class="control-label col-sm-2" for="birthWeight">Birth Weight</label>
+                                                    <div class="col-sm-10">
+                                                         <input type="number" class="form-control" id="birthWeight" placeholder="Round to nearest 100g">
+                                                     </div>            
+                                            </div> 
+                                            <div class="form-group">
+                                                    <label class="control-label col-sm-2" for="abortion">Abortion Edit Indicator</label>
+                                                       <div class="col-sm-10">
+                                                            <select class="form-control" id="abortion">                               
+                                                                    <option>Y</option>
+                                                                    <option>N</option>
+                                                            </select>                                                       
+                                                        </div>            
+                                               </div> 
+                                               <div class="form-group">
+                                                    <label class="control-label col-sm-2" for="emergency">Emergency Indicator</label>
+                                                       <div class="col-sm-10">
+                                                            <select class="form-control" id="emergency">                               
+                                                                    <option>Y</option>
+                                                                    <option>N</option>
+                                                            </select>                                                       
+                                                        </div>            
+                                               </div>
+                                                                     
+                                                    
                 <div class="form-group">        
                   <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" class="btn btn-default">Submit</button>
